# RTLauncher

./: .gitmodules  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: main.yml
app/: globals.css  layout.tsx
components/: example.tsx  mode-toggle.tsx  sidebar.tsx  title-bar.tsx
dev_info/: INTEGRATION_GUIDE.md  QUICKSTART.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: login.rs
src-tauri/src/module/: mod.rs
src-tauri/src/module/download/: decompression.rs  dwl_main.rs  mod.rs  paths.rs
src-tauri/src/module/start_game/: mod.rs  stg_main.rs
src-tauri/src/utils/: get_java_path.rs  mod.rs  request.rs
