[package]
name = "RTLauncher"
version = "0.1.0"
description = "A Minecraft Launcher for redstone player"
authors = ["RTLauncher Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rtlauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
open = "5.3.2"
log = "0.4.25"
futures = "0.3.31"
futures-util = "0.3.31"
sha1 = "0.10.6"
zip = "2.2.2"
os_info = "3.9.2"
walkdir = "2.5.0"
dirs = "5.0"

